nav bar gap fix

--- a/src/Css-Pages/Navbr.css
+++ b/src/Css-Pages/Navbr.css
@@ -48,7 +48,7 @@
   text-decoration: none;
   color: #333;
   font-size: small;
-  font-size: 20px !important;
+  font-size: 16px !important;
   font-size: large;
   padding-left: -0px !important;
   margin-left: 8px;
@@ -56,4 +56,8 @@
 
 .dropdown-menu li a:hover {
   color: red;
+}
+
+.matress-item {
+  transform: translate(-8%);
 }
